--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http": "0.0.0",
     "https": "^1.0.0",
     "m3u8-parser": "^4.7.0",
+    "mysql": "^2.18.1",
     "nconf": "^0.11.3",
     "queue": "^6.0.2",
     "url": "^0.11.0",
