--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "m3u8-downloader",
-  "version": "1.0.0",
-  "description": "",
+  "name": "m3u8-downloader-sync",
+  "version": "1.0.3",
+  "description": "a package for downloading m3u8 video",
   "main": "dist/index.js",
   "scripts": {
     "watch-server": "nodemon --ignore tests/ --watch src -e ts,tsx --exec ts-node src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Jackie Leung",
   "license": "ISC",
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.20",
@@ -17,23 +17,16 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "aria2": "^4.1.2",
     "async": "^3.2.1",
-    "crypto-js": "^4.1.1",
     "dateformat": "^4.5.1",
     "download": "^8.0.0",
-    "electron-context-menu": "^3.1.1",
-    "electron-is-dev": "^2.0.0",
     "ffmpeg-static": "^4.4.0",
     "fluent-ffmpeg": "^2.1.2",
-    "forever-monitor": "^1.5.2",
     "got": "^11.8.2",
     "hpagent": "^0.1.2",
     "http": "0.0.0",
     "https": "^1.0.0",
     "m3u8-parser": "^4.7.0",
-    "nconf": "^0.11.3",
-    "queue": "^6.0.2",
     "url": "^0.11.0",
     "winston": "^3.3.3"
   }
