--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
   "name": "m3u8-downloader-sync",
-  "version": "1.0.4",
+  "version": "1.0.6",
+  "keywords": [
+    "m3u8",
+    "downloader",
+    "sync"
+  ],
   "description": "a package for downloading m3u8 video",
   "main": "dist/index.js",
   "scripts": {
     "watch-server": "nodemon --ignore tests/ --watch src -e ts,tsx --exec ts-node src/index.ts",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf ./dist && tsc",
+    "test": "node ./dist/test/downloadTest.js"
   },
   "author": "Jackie Leung",
   "license": "ISC",
   "devDependencies": {
+    "@types/download": "^8.0.1",
+    "@types/ffmpeg-static": "^3.0.1",
     "@types/fluent-ffmpeg": "^2.1.20",
+    "@types/node": "^18.11.9",
     "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.5.4"
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "async": "^3.2.1",
-    "dateformat": "^4.5.1",
     "download": "^8.0.0",
     "ffmpeg-static": "^4.4.0",
     "fluent-ffmpeg": "^2.1.2",
     "got": "^11.8.2",
     "hpagent": "^0.1.2",
-    "http": "0.0.0",
-    "https": "^1.0.0",
     "m3u8-parser": "^4.7.0",
-    "url": "^0.11.0",
     "winston": "^3.3.3"
   }
 }
