--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "build": "rimraf ./dist && tsc",
-    "test": "node ./dist/test/downloadTest.js",
-    "dev-test": "ts-node ./test/downloadTest.ts"
+    "test": "node ./test/download.js"
   },
   "author": "Jackie Leung",
   "repository": {
@@ -23,21 +21,19 @@
   "devDependencies": {
     "@types/download": "^8.0.1",
     "@types/ffmpeg-static": "^3.0.1",
-    "@types/fluent-ffmpeg": "^2.1.20",
+    "@types/m3u8-parser": "^7.2.2",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.7",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
+    "chalk": "^5.6.2",
+    "dayjs": "^1.11.13",
     "download": "^8.0.0",
+    "execa": "^9.6.0",
     "ffmpeg-static": "^4.4.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "got": "^11.8.2",
-    "hpagent": "^0.1.2",
+    "ky": "^1.10.0",
     "m3u8-parser": "^4.7.0",
-    "sanitize-filename": "^1.6.3",
-    "winston": "^3.3.3"
+    "sanitize-filename": "^1.6.3"
   }
 }
