--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "execa": "^9.6.0",
     "ffmpeg-static": "^4.4.0",
     "ky": "^1.10.0",
+    "log4js": "^6.9.1",
     "m3u8-parser": "^4.7.0",
     "sanitize-filename": "^1.6.3"
   }
