--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "a package for downloading m3u8 video",
   "keywords": [
     "m3u8",
-    "downloader",
-    "sync"
+    "downloader"
   ],
   "type": "module",
   "main": "src/index.js",
